# experience-hub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DCO  NOTICE  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  alembic.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml
benchmarks/: cases.jsonl  seed.json
docs/architecture/: experience-lifecycle-contracts.md  foundation-contracts.md  inspiration-contracts.md  social-propagation-contracts.md  system-overview.md
docs/operations/: local-runbook.md
src/experience_hub/: __init__.py  bootstrap.py  canonical.py  clock.py  config.py  errors.py  ids.py  runtime.py
tests/: conftest.py
tests/api/: test_agents.py  test_capsules.py  test_cross_agent_isolation.py  test_error_contract.py  test_experiences.py  test_feedback.py  test_health.py  test_ideas.py  test_idempotency_contract.py  test_inbox.py  test_inspiration_configuration.py  test_inspiration_disconnect.py  test_inspiration_runs.py  test_lifecycle.py  test_pagination.py  test_search.py  test_startup.py  test_topics.py
tests/benchmark/: test_case_loading.py  test_comparison_output.py  test_effectiveness_gates.py  test_fixture_coverage.py  test_metrics.py  test_runner_isolation.py
tests/cli/: test_lifecycle_command.py  test_payload_command.py  test_projection_commands.py  test_serve.py
tests/contract/: test_console_script.py  test_experience_exports.py  test_foundation_exports.py  test_inspiration_exports.py  test_release_tooling.py  test_sharing_exports.py  test_testclient_dependency.py
tests/e2e/: test_benchmark_replay.py  test_demo.py  test_echo_resistance.py  test_inspiration_isolation.py  test_inspiration_replay.py  (+4 more)
(+204 files in other folders)
