[project]
name = "experience-hub"
version = "0.1.0"
description = "Local-first, deterministic infrastructure for auditable agent memory and evidence-grounded inspiration"
license = "Apache-2.0"
authors = [
    { name = "恒椿" },
]
readme = "README.md"
keywords = [
    "agent-memory",
    "ai-agents",
    "event-sourcing",
    "knowledge-management",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.20,<1",
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "jieba==0.42.1",
    "pydantic>=2.9,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "typer>=0.12,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
experience-hub = "experience_hub.cli.app:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experience_hub"]

[dependency-groups]
dev = [
    "httpx2>=2.7,<3",
    "mypy>=1.11,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=experience_hub"

[tool.coverage.run]
branch = true
source = ["experience_hub"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = "src"
